test_scripts/errors/struct_wrong_arg_count.stderr
 1 | struct Point { x, y }
 2 | Point(1, 2, 3);
     ^^^^^^^^^^^^^^
Error: Too many positional args, 1 remaining
